--- a/test_join.ipynb
+++ b/test_join.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "99931dc4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/birdfifty/Documents/py/nwcc_util/lib/python3.8/site-packages/geopandas/_compat.py:106: UserWarning: The Shapely GEOS version (3.8.0-CAPI-1.13.1 ) is incompatible with the GEOS version PyGEOS was compiled with (3.9.1-CAPI-1.14.2). Conversions between both will be slow.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import geopandas\n",
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "78127dab",
    "metadata": {},
    "outputs": [
@@ -75,7 +84,7 @@
        " [8.50352, 98.58305]]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "62d13e47",
    "metadata": {},
    "outputs": [
@@ -149,19 +158,19 @@
        "3  8.50352   98.58305"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df=df = DataFrame(ar,columns=['lat','lng'])\n",
+    "df = DataFrame(ar,columns=['lat','lng'])\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "71fafd8d",
    "metadata": {},
    "outputs": [
@@ -228,7 +237,7 @@
        "3  8.50352   98.58305   POINT (98.58305 8.50352)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "b6d92602",
    "metadata": {},
    "outputs": [
@@ -470,7 +479,7 @@
        "[9304 rows x 10 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "eb38a7bf",
    "metadata": {
     "scrolled": true
@@ -602,7 +611,7 @@
        "3         NaN    None   None               None  POINT (100.59734 7.23755)  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,8 +623,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c41e5c11",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"type\": \"FeatureCollection\", \"features\": [{\"id\": \"0\", \"type\": \"Feature\", \"properties\": {\"AMP_NAMT\": \"\\\\u0e23\\\\u0e31\\\\u0e15\\\\u0e20\\\\u0e39\\\\u0e21\\\\u0e34\", \"FID_MainBa\": 23.0, \"MB_CODE\": \"20\", \"NBASIN_T\": \"\\\\u0e17\\\\u0e30\\\\u0e40\\\\u0e25\\\\u0e2a\\\\u0e32\\\\u0e1a\\\\u0e2a\\\\u0e07\\\\u0e02\\\\u0e25\\\\u0e32\", \"PROV_NAMT\": \"\\\\u0e2a\\\\u0e07\\\\u0e02\\\\u0e25\\\\u0e32\", \"TAM_NAMT\": \"\\\\u0e40\\\\u0e02\\\\u0e32\\\\u0e1e\\\\u0e23\\\\u0e30\", \"code_id\": 900909.0, \"lat\": 6.98899, \"lng\": 100.20831, \"region\": \"\\\\u0e43\\\\u0e15\\\\u0e49\", \"tam_id\": \"900909\"}, \"geometry\": {\"type\": \"Point\", \"coordinates\": [100.20831, 6.98899]}}, {\"id\": \"1\", \"type\": \"Feature\", \"properties\": {\"AMP_NAMT\": \"\\\\u0e23\\\\u0e31\\\\u0e15\\\\u0e20\\\\u0e39\\\\u0e21\\\\u0e34\", \"FID_MainBa\": 23.0, \"MB_CODE\": \"20\", \"NBASIN_T\": \"\\\\u0e17\\\\u0e30\\\\u0e40\\\\u0e25\\\\u0e2a\\\\u0e32\\\\u0e1a\\\\u0e2a\\\\u0e07\\\\u0e02\\\\u0e25\\\\u0e32\", \"PROV_NAMT\": \"\\\\u0e2a\\\\u0e07\\\\u0e02\\\\u0e25\\\\u0e32\", \"TAM_NAMT\": \"\\\\u0e40\\\\u0e02\\\\u0e32\\\\u0e1e\\\\u0e23\\\\u0e30\", \"code_id\": 900909.0, \"lat\": 7.10658, \"lng\": 100.05704, \"region\": \"\\\\u0e43\\\\u0e15\\\\u0e49\", \"tam_id\": \"900909\"}, \"geometry\": {\"type\": \"Point\", \"coordinates\": [100.05704, 7.10658]}}, {\"id\": \"2\", \"type\": \"Feature\", \"properties\": {\"AMP_NAMT\": \"\\\\u0e17\\\\u0e31\\\\u0e1a\\\\u0e1b\\\\u0e38\\\\u0e14\", \"FID_MainBa\": 26.0, \"MB_CODE\": \"22\", \"NBASIN_T\": \"\\\\u0e20\\\\u0e32\\\\u0e04\\\\u0e43\\\\u0e15\\\\u0e49\\\\u0e1d\\\\u0e31\\\\u0e48\\\\u0e07\\\\u0e15\\\\u0e30\\\\u0e27\\\\u0e31\\\\u0e19\\\\u0e15\\\\u0e01\", \"PROV_NAMT\": \"\\\\u0e1e\\\\u0e31\\\\u0e07\\\\u0e07\\\\u0e32\", \"TAM_NAMT\": \"\\\\u0e16\\\\u0e49\\\\u0e33\\\\u0e17\\\\u0e2d\\\\u0e07\\\\u0e2b\\\\u0e25\\\\u0e32\\\\u0e07\", \"code_id\": 820704.0, \"lat\": 8.50352, \"lng\": 98.58305, \"region\": \"\\\\u0e43\\\\u0e15\\\\u0e49\", \"tam_id\": \"820704\"}, \"geometry\": {\"type\": \"Point\", \"coordinates\": [98.58305, 8.50352]}}, {\"id\": \"3\", \"type\": \"Feature\", \"properties\": {\"AMP_NAMT\": null, \"FID_MainBa\": null, \"MB_CODE\": null, \"NBASIN_T\": null, \"PROV_NAMT\": null, \"TAM_NAMT\": null, \"code_id\": null, \"lat\": 7.23755, \"lng\": 100.59734, \"region\": null, \"tam_id\": null}, \"geometry\": {\"type\": \"Point\", \"coordinates\": [100.59734, 7.23755]}}]}'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "j=ide.to_json()\n",
+    "j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d9affc8",
    "metadata": {},
    "outputs": [],
    "source": []
